# Productivity-Agent

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_calendar.py  test_calendar_service.py
app/: server.py
app/agents/: agent.py  supervisor.py
app/api/: routes.py
app/confirmation/: manager.py  singleton.py  state.py
app/core/: config.py  confirmation.py  llm.py  tool_llm.py
app/database/: database.py  init_db.py  models.py  todo_repository.py
app/graph/: state.py  workflow.py
app/prompts/: meeting_summary.txt  slides.txt  supervisor.txt  system.txt
app/services/: calendar_service.py  excel_service.py  meeting_service.py  presentation_service.py
app/tools/: all_tools.py  calendar.py  excel.py  meetings.py  registry.py  slides.py  todo.py
app/utils/: prompt_loader.py
streamlit-app/: api.py  app.py  style.py
